plugins {
    id 'java'
    id 'application'
}

allprojects {
    apply plugin: 'java'
    group 'com.eif400.server'
    version '1.0-SNAPSHOT'

    sourceCompatibility = 14

    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }


    repositories {
        mavenCentral()
    }

    dependencies {
        testCompile group: 'junit', name: 'junit', version: '4.12'
        compile 'javax.servlet:javax.servlet-api:4.0.1'
        compile 'org.nanohttpd:nanohttpd:2.3.1'
        compile 'org.nanohttpd:nanohttpd-nanolets:2.3.1'
        compile 'org.nanohttpd:nanohttpd-websocket:2.3.1'
        compile 'org.nanohttpd:nanohttpd-webserver:2.3.1'
    }
}



